--- a/assets/css/todo.css
+++ b/assets/css/todo.css
@@ -5,6 +5,7 @@
 {
   border: var(--border);
   height: 100vh;
+  flex-direction: column;
 }
 .menu {
     width: var(--menuWidth);    
@@ -20,7 +21,7 @@
     border-color: #0500FF;
 }
 body {
-    font-family: 'Roboto';
+    font-family:sans-serif;
 }
 /* Menu - Header*/ 
 .menu> .menu__header__profile{
@@ -55,6 +56,37 @@ body {
     
     border: none;
     background: none;
+}
+.menu .activity ul {
+    width: 100%; ;
+    display: flex;
+    flex-direction: column;
+    border-bottom: solid 0.5px rgba(100, 100, 100, 0.2); 
+
+}
+.menu> .activity ul li{
+    line-height: 50px;
+    display: flex;
+    align-items: center;
+    padding-left: 5%;
+    font-size: 0.9em;
+    
+}
+.menu> .activity ul li:hover {
+    background-color: rgba(100, 100, 100, 0.12);
+    cursor: pointer;
+}
+
+.menu> .activity ul li> svg{
+    margin-right: 10%;
+}
+
+header .menu__header__profile > div:first-child{
+    margin-left: 15px;
+}
+header .menu__header__profile> div
+{
+    margin-top: 15px;
 }
 
 /*Fim Menu Header   */
