--- a/assets/css/todo.css
+++ b/assets/css/todo.css
@@ -16,7 +16,7 @@
     background-color: #f2f2f2;
 }
 .container {
-    width: calc(100vw - (var(--menuWidth) + var(--detailsWidht)));
+    width: calc(100vw - (var(--menuWidth) + var(--detailsWidht)));  
     
     border-color: #FA00FF;
 }
@@ -96,8 +96,8 @@ header .menu__header__profile> div
 /*Fim Menu Header   */
 /* main - .container */
 .container{
-    height: inherit;
     width: 100%;
+    height: inherit;
     flex-direction: column;
     background: url(/assets/images/bg-phone.jpg) center no-repeat;
     background-size: cover;
@@ -124,10 +124,13 @@ header .menu__header__profile> div
     justify-content: space-between;
 }
 /* Task */
+.tasks{
+    flex-direction: column;
+}
 .task{
     width: 90%;
-    margin: 2% 5%;
-    height: 60px;
+    margin: 1% 5%;
+    height: 40px;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
@@ -154,12 +157,6 @@ header .menu__header__profile> div
         background-size: cover;        
     }
 }
-@media (min-width: 2520px)
-{
-    .container{
-        background-color: url(/assets/images/bg-desktop.jpg);
-        background-size: cover;        
-    }
-}
+
 
 /* Fim do main - . container */
